<resources>
    <string name="app_name">MtsProject</string>
    <string name="film_genre">боевики</string>
    <string name="data">22.04.2021</string>
    <string name="limitation">18+</string>
    <string name="name_film">Грев человеческий</string>
    <string name="content">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="actor1">Джейсон Стэйтем</string>
    <string name="actor2">Холт Маккэллани</string>
    <string name="actor3">Джош Харнетт</string>

    <string name="popular">Популярное сейчас</string>

    <string name="user_name">Константин</string>
    <string name="user_data">Личные данные</string>
    <string name="user_email">konst.89@mail.com</string>
    <string name="user_interest">Интересы</string>
    <string name="name">Имя</string>
    <string name="telephone">Телефон</string>
    <string name="settings">Настройки</string>
    <string name="yv_sound">Уведомления и звуки</string>
    <string name="konf">Конфедициальность</string>
    <string name="tema">Тема</string>
    <string name="lang">Язык</string>
    <string name="pril">Приложение</string>
    <string name="que">Задать вопрос</string>
    <string name="data_and">Данные и память</string>
    <string name="probl">Сообщить о проблеме</string>
    <string name="exit">Выйти</string>
    <string name="passw">**********</string>

    <string name="please_wait">Пожалуйста подождите...</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>