<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImgMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardImgMainH"
        android:backgroundTint="@color/black"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageDetId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageDetIdH"
            android:scaleType="fitCenter" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="224dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/scroll">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RcActor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mainMarginStartEnd"
                android:layout_marginTop="332dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/filmRatingDet"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/mainMarginStartEnd"
                android:layout_marginTop="8dp"

                android:numStars="5"
                android:isIndicator="true"

                android:progressDrawable="@drawable/star_change"

                android:rating="3.0"
                android:stepSize="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleId" />


            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="300dp"
                android:text="@string/actors"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mainMarginStartEnd"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="@dimen/mainMarginStartEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/textdescripId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="64dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ageRestrictionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ring"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/limitation"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/textdescripId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textgenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mainMarginStartEnd"
                android:layout_marginTop="32dp"
                android:background="@drawable/oval2"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/film_genre"
                android:textColor="@color/black"
                android:textSize="@dimen/textCatFilm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/black"
                android:textSize="@dimen/textdata"
                app:layout_constraintStart_toEndOf="@+id/textgenre"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>